// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormFieldSet > renders correctly with class 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4 custom-class"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with legend 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size lg 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size md 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-sm"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size sm 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-xs"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with ui 1`] = `
<div>
  <fieldset
    class="mt-2 border border-default px-4 pb-4 rounded-lg"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;
